--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,35 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script type="text/javascript">
+      (function() {
+        function getInitialColorMode() {
+          const isClient = typeof window !== 'undefined';
+          if (isClient) {
+            const persistedColorPreference = window.localStorage.getItem('mode');
+    
+            if (persistedColorPreference) {
+              return persistedColorPreference;
+            }
+    
+            const systemPreference = window.matchMedia('(prefers-color-scheme: dark)');
+            if (systemPreference.matches) {
+              return 'true';
+            }
+            return 'false';
+          }
+        }
+        const colorMode = getInitialColorMode();
+        document.documentElement.style.setProperty(
+          'background-color',
+          colorMode === 'false' ? '#FFFFFF' : '#2F2F2F'
+        );
+        document.documentElement.style.setProperty(
+          'color',
+          colorMode === 'false' ? '#000000' : '#e5e5e5'
+        );
+      })();
+    </script>
     <title>React App</title>
   </head>
   <body>
